feat(tee): add endpoint to get all tees for a specific hole
