# docs/swagger.yaml
@@ -531,6 +531,42 @@ paths:
       summary: Create a new hole
       tags:
       - Holes
+  /v1/holes/{hole_id}/tees:
+    get:
+      parameters:
+      - description: Hole ID
+        in: path
+        name: hole_id
+        required: true
+        type: string
+      - description: Page number (default is 1)
+        in: query
+        name: page
+        type: integer
+      - description: Page size (default is 10)
+        in: query
+        name: pageSize
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/Tee'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/AppError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/AppError'
+      summary: Get all tees for a specific hole
+      tags:
+      - Tees
   /v1/holes/{id}:
     delete:
       parameters:
